--- a/vignettes/e-Bias-from-incomplete-sampling.html
+++ b/vignettes/e-Bias-from-incomplete-sampling.html
@@ -834,8 +834,8 @@ Estimates of logit(p)
 <div id="references" class="section level1" number="5">
 <h1 number="5"><span class="header-section-number">5</span> References</h1>
 <p>Bonner Simon, J., &amp; Schwarz Carl, J. (2011). Smoothing Population Size Estimates for Time-Stratified MarkRecapture Experiments Using Bayesian P-Splines. Biometrics, 67, 1498–1507. <a href="https://doi.org/10.1111/j.1541-0420.2011.01599.x" class="uri">https://doi.org/10.1111/j.1541-0420.2011.01599.x</a></p>
-<p>Darroch, J. N. (1961). The two-sample capture-recapture census when tagging and sampling are stratified. Biometrika, 48, 241–260. <a href="https://www.jstor.org/stable/2332748" class="uri">https://www.jstor.org/stable/2332748</a></p>
-<p>Plante, N., L.-P Rivest, and G. Tremblay. (1988). Stratified Capture-Recapture Estimation of the Size of a Closed Population. Biometrics 54, 47-60. <a href="https://www.jstor.org/stable/2533994" class="uri">https://www.jstor.org/stable/2533994</a></p>
+<p>Darroch, J. N. (1961). The two-sample capture-recapture census when tagging and sampling are stratified. Biometrika, 48, 241–260. <a href="https://doi.org/10.2307/23327" class="uri">https://doi.org/10.2307/23327</a></p>
+<p>Plante, N., L.-P Rivest, and G. Tremblay. (1988). Stratified Capture-Recapture Estimation of the Size of a Closed Population. Biometrics 54, 47-60. <a href="https://doi.org/10.2307/2533994" class="uri">https://doi.org/10.2307/2533994</a></p>
 <p>Schwarz, C. J., &amp; Taylor, C. G. (1998). The use of the stratified-Petersen estimator in fisheries management with an illustration of estimating the number of pink salmon (Oncorhynchus gorbuscha) that return to spawn in the Fraser River. Canadian Journal of Fisheries and Aquatic Sciences, 55, 281–296. <a href="https://doi.org/10.1139/f97-238" class="uri">https://doi.org/10.1139/f97-238</a></p>
 </div>
 
